[package]
name = "deduplicator"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
sha2 = "0.9.5"
walkdir = "2"
rayon = "1"
serde_json = "1"
serde = {version = "1", features = ["derive"]}